--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-repository: shujinghe/shujinghe.github.io
-github_url: https://github.com/shujinghe
-url: https://shujinghe.github.io
+repository: 40684047/40684047.github.io
+github_url: https://github.com/40684047
+url: https://40684047.github.io
